--- a/index.html
+++ b/index.html
@@ -304,8 +304,16 @@
                         大阪府大阪市中央区淡路町1-3-2
                     </p>
                 </div>
-                <div class="company-image">
-                    <img src="images/company.jpg" alt="物流センター">
+                <div class="company-map">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.0234567890123!2d135.50583331234567!3d34.68583336789012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e71234567890%3A0x1234567890abcdef!2z5aSn6Ziq5bqc5aSn6Ziq5biC5Lit5aSu5Yy65reA6Lev55S6MS0zLTI!5e0!3m2!1sja!2sjp!4v1234567890123!5m2!1sja!2sjp"
+                        width="100%"
+                        height="100%"
+                        style="border:0;"
+                        allowfullscreen=""
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                 </div>
             </div>
         </div>
