--- a/index.html
+++ b/index.html
@@ -5,6 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cross株式会社 | 物流をもっとスマートに</title>
     <meta name="description" content="Cross株式会社は梱包・検品・ピッキング・軽作業のプロフェッショナル集団です。確かな品質と迅速な対応でお客様の物流をサポートします。">
+    <meta name="keywords" content="物流,梱包,検品,ピッキング,軽作業,アウトソーシング,大阪,Cross株式会社">
+    <meta name="author" content="Cross株式会社">
+    <meta name="robots" content="index, follow">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="canonical" href="https://cross-corp.jp/">
+
+    <!-- OGP -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Cross株式会社 | 物流をもっとスマートに">
+    <meta property="og:description" content="Cross株式会社は梱包・検品・ピッキング・軽作業のプロフェッショナル集団です。確かな品質と迅速な対応でお客様の物流をサポートします。">
+    <meta property="og:url" content="https://cross-corp.jp/">
+    <meta property="og:site_name" content="Cross株式会社">
+    <meta property="og:image" content="https://cross-corp.jp/images/ogp.jpg">
+    <meta property="og:locale" content="ja_JP">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Cross株式会社 | 物流をもっとスマートに">
+    <meta name="twitter:description" content="Cross株式会社は梱包・検品・ピッキング・軽作業のプロフェッショナル集団です。">
+    <meta name="twitter:image" content="https://cross-corp.jp/images/ogp.jpg">
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+
+    <!-- 構造化データ (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Cross株式会社",
+        "alternateName": "CROSS CO., LTD.",
+        "url": "https://cross-corp.jp/",
+        "logo": "https://cross-corp.jp/images/logo.png",
+        "description": "梱包・検品・ピッキング・軽作業のプロフェッショナル集団",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "淡路町1-3-2",
+            "addressLocality": "大阪市中央区",
+            "addressRegion": "大阪府",
+            "postalCode": "541-0047",
+            "addressCountry": "JP"
+        },
+        "sameAs": [],
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "contactType": "customer service",
+            "availableLanguage": "Japanese"
+        }
+    }
+    </script>
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
