--- a/index.html
+++ b/index.html
@@ -74,33 +74,9 @@
             </div>
             <nav class="global-nav">
                 <ul class="nav-list">
-                    <li class="nav-item has-dropdown">
-                        <a href="#about">私たちについて</a>
-                        <ul class="dropdown">
-                            <li><a href="#message">代表メッセージ</a></li>
-                            <li><a href="#company">会社概要</a></li>
-                            <li><a href="#locations">拠点情報</a></li>
-                            <li><a href="#history">沿革</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item has-dropdown">
-                        <a href="#services">サービス</a>
-                        <ul class="dropdown">
-                            <li><a href="#service1">梱包作業</a></li>
-                            <li><a href="#service2">検品作業</a></li>
-                            <li><a href="#service3">ピッキング</a></li>
-                            <li><a href="#service4">仕分け作業</a></li>
-                            <li><a href="#service5">その他軽作業</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item has-dropdown">
-                        <a href="#features">選ばれる理由</a>
-                        <ul class="dropdown">
-                            <li><a href="#quality">品質管理</a></li>
-                            <li><a href="#speed">スピード対応</a></li>
-                            <li><a href="#flexibility">柔軟な対応力</a></li>
-                        </ul>
-                    </li>
+                    <li class="nav-item"><a href="#about">私たちについて</a></li>
+                    <li class="nav-item"><a href="#services">サービス</a></li>
+                    <li class="nav-item"><a href="#company">会社概要</a></li>
                     <li class="nav-item"><a href="#recruit">採用情報</a></li>
                 </ul>
             </nav>
@@ -209,7 +185,6 @@
                     </div>
                     <h3 class="strength-title">徹底した<br>品質管理</h3>
                     <p class="strength-text">ダブルチェック体制と独自の品質基準により、ミスのない正確な作業を実現します。</p>
-                    <a href="#quality" class="strength-link">詳しく見る</a>
                 </div>
                 <div class="strength-card">
                     <div class="strength-num">02</div>
@@ -221,7 +196,6 @@
                     </div>
                     <h3 class="strength-title">スピード対応<br>短納期OK</h3>
                     <p class="strength-text">急なご依頼にも柔軟に対応。短納期案件も経験豊富なスタッフがスピーディに処理します。</p>
-                    <a href="#speed" class="strength-link">詳しく見る</a>
                 </div>
                 <div class="strength-card">
                     <div class="strength-num">03</div>
@@ -235,7 +209,6 @@
                     </div>
                     <h3 class="strength-title">経験豊富な<br>スタッフ</h3>
                     <p class="strength-text">研修を受けた熟練スタッフが多数在籍。安心してお任せいただけます。</p>
-                    <a href="#staff" class="strength-link">詳しく見る</a>
                 </div>
                 <div class="strength-card">
                     <div class="strength-num">04</div>
@@ -249,7 +222,6 @@
                     </div>
                     <h3 class="strength-title">柔軟な<br>対応力</h3>
                     <p class="strength-text">小ロットから大量案件まで、お客様のニーズに合わせた最適なプランをご提案します。</p>
-                    <a href="#flexibility" class="strength-link">詳しく見る</a>
                 </div>
             </div>
         </div>
@@ -271,12 +243,6 @@
                     <div class="product-content">
                         <h3 class="product-title">梱包作業</h3>
                         <p class="product-text">商品の特性に合わせた最適な梱包。破損防止・美観を両立した丁寧な作業</p>
-                        <span class="product-link">
-                            詳しく見る
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M5 12h14M12 5l7 7-7 7"></path>
-                            </svg>
-                        </span>
                     </div>
                 </a>
                 <a href="#service2" class="product-card">
@@ -286,12 +252,6 @@
                     <div class="product-content">
                         <h3 class="product-title">検品作業</h3>
                         <p class="product-text">入荷検品・出荷検品・外観検査など、厳格な基準による品質チェック</p>
-                        <span class="product-link">
-                            詳しく見る
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M5 12h14M12 5l7 7-7 7"></path>
-                            </svg>
-                        </span>
                     </div>
                 </a>
                 <a href="#service3" class="product-card">
@@ -301,12 +261,6 @@
                     <div class="product-content">
                         <h3 class="product-title">ピッキング</h3>
                         <p class="product-text">正確かつ迅速なピッキング作業。EC物流・店舗配送など幅広く対応</p>
-                        <span class="product-link">
-                            詳しく見る
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M5 12h14M12 5l7 7-7 7"></path>
-                            </svg>
-                        </span>
                     </div>
                 </a>
                 <a href="#service4" class="product-card">
@@ -316,12 +270,6 @@
                     <div class="product-content">
                         <h3 class="product-title">仕分け作業</h3>
                         <p class="product-text">配送先別・商品種別など様々な仕分けに対応。効率的な物流をサポート</p>
-                        <span class="product-link">
-                            詳しく見る
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M5 12h14M12 5l7 7-7 7"></path>
-                            </svg>
-                        </span>
                     </div>
                 </a>
                 <a href="#service5" class="product-card">
@@ -331,12 +279,6 @@
                     <div class="product-content">
                         <h3 class="product-title">その他軽作業</h3>
                         <p class="product-text">シール貼り・タグ付け・組立・セット作業など多様な軽作業に対応</p>
-                        <span class="product-link">
-                            詳しく見る
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M5 12h14M12 5l7 7-7 7"></path>
-                            </svg>
-                        </span>
                     </div>
                 </a>
             </div>
