--- a/index.html
+++ b/index.html
@@ -454,6 +454,10 @@
 
     <!-- フッター -->
     <footer class="footer">
+        <video class="footer-bg-video" autoplay muted loop playsinline>
+            <source src="images/Footer.mp4" type="video/mp4">
+        </video>
+        <div class="footer-overlay"></div>
         <div class="footer-top">
             <div class="container">
                 <div class="footer-grid">
